--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^3.1.4",
+    "ngx-pipes": "^2.3.7",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
   },
