--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "angular-file-saver": "^1.1.3",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "file-saver": "^2.0.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^3.1.4",
