--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "hammerjs": "^2.0.8",
     "ngx-bootstrap": "^3.1.4",
     "ngx-pipes": "^2.3.7",
-    "rxjs": "^6.0.0",
+    "rxjs": "6.0.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -40,6 +40,7 @@
     "@angular/cli": "~6.1.5",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
+    "@types/file-saver": "^2.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
